New Home Page with Image and Heading Centre

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-<h1>My creative happy place.</h1>
+<h1 style="text-align:center;">My creative happy place.<h1>
 <img src="duotone.png">
 
 </body>
