--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-<h1 style="text-align:center;">My creative happy place.<h1>
+<h1 style="text-align:center;">My Creative Happy Place.<h1>
 <img src="duotone.png">
 
 </body>
