--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     
 <h1 style="text-align:center;">My Creative Happy Place.<h1>
-<img src="duotone.png">
+<img src="duotone.png" width="640"> 
 
 </body>
 </html>
