--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page Philip Burtenshaw</title>
+
+    <style>
+        .responsive {
+          width: 100%;
+          max-width: 400px;
+          height: auto;
+        }
+        </style>
 </head>
 <body>
     
 <h1 style="text-align:center;">My Creative Happy Place.<h1>
-<img src="duotone.png" width="2320"> 
+<img src="duotone.png" alt="Laptop" class="responsive">
+
+
 
 </body>
 </html>
