New Home Page with Responsive Image

--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page Philip Burtenshaw</title>
+    <title>Philip Burtenshaw Web Design</title>
 
     <style>
         .responsive {
           width: 100%;
+          max-width: 100%;
           height: auto;
+          max-height: 100%;
         }
         </style>
 </head>
 <body>
     
-<h1 style="text-align:center;">My Creative Happy Place.<h1>
+<h1 style="text-align:center;">My Creative Place.<h1>
 
 <img src="duotone.png" alt="Laptop" class="responsive">
 
