--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <style>
         .responsive {
           width: 100%;
-          max-width: 100%;
-          height: auto;
-          max-height: 100%;
+          max-height: auto;
         }
         </style>
 </head>
