--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
         </style>
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159180191-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -20,7 +20,8 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-159180191-1');
-</script>        
+</script>
+
 </head>
 
 <body>
