--- a/base-1.html
+++ b/base-1.html
@@ -23,9 +23,9 @@
 </head>
 
 <body>
-        <h1>Heading 1</h1>
+        <h1>About Philip Burtenshaw Web Design</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in ipsum at risus feugiat facilisis at et orci.</p>
-      
+
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in ipsum at risus feugiat facilisis at et orci.</p>
 
         <h2>Heading 2</h2>
