--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Philip Burtenshaw Web Design</title>
+    <title>Philip Burtenshaw Web Design - The Creative Show Reel.</title>
 
     <style>
         .responsive {
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <h1 style="text-align:center;">My Creative Place.<h1>
+    <h1 style="text-align:center;">Philip Burtenshaw Web Design - The Creative Show Reel.<h1>
     <img src="duotone.png" alt="Laptop" class="responsive">
 </body>
 
