Playing even more with CSS

--- a/base-1.html
+++ b/base-1.html
@@ -23,12 +23,12 @@
 </head>
 
 <body>
-        <h1>About Us</h1>
+        <h2>Philip Burtenshaw Web Design - The Creative Show Reel.</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in ipsum at risus feugiat facilisis at et orci.</p>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in ipsum at risus feugiat facilisis at et orci.</p>
 
-        <h2>Services</h2>
+        <h3>Services</h3>
         <p>Donec ut leo eget risus mattis mattis non vitae massa. Suspendisse potenti. Aenean efficitur fermentum orci ac blandit. Quisque tempus tincidunt metus at interdum. Aenean elementum vehicula tellus id gravida. Aenean mollis sollicitudin elit.</p>
       
         <p>Morbi eu ipsum sed nunc porta posuere. Donec et mi accumsan, eleifend augue ac, pellentesque risus. Maecenas in egestas dolor, vitae consequat dui.</p>
