--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
         </style>
 
 <!-- Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159180191-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159448388-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-159180191-1');
+  gtag('config', 'UA-159448388-1');
+</script>
+;
 </script>
 
 </head>
