With corrected title text

--- a/base-2.html
+++ b/base-2.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <title>Web page with desktop-only styles</title>
+  <title>Web page with responsive layout</title>
+
   <meta name="description" content="A sample web page with a linked stylesheet for responsive layout.">
 
   <meta name="Philip Burtenshaw" content="Philip Burtenshaw">
