Tonights File Upload

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Philip Burtenshaw Web Design - The Creative Show Reel.</title>
+    <title>Philip Burtenshaw Web Design.</title>
 
     <style>
         .responsive {
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-    <h1 style="text-align:center;">Philip Burtenshaw Web Design - The Creative Show Reel.<h1>
+    <h1 style="text-align:center;">Philip Burtenshaw Web Design.<h1>
     <img src="duotone.png" alt="Laptop" class="responsive">
 </body>
 
