--- a/base-0.html
+++ b/base-0.html
@@ -6,7 +6,7 @@
     <title>Sample web page with default styling</title>
     <meta name="description" content="A sample web page without a linked stylesheet file.">
 
-    <meta name="Philip Burtenshaw" content="Philip Burtenshaw Web Design - The Creative Show Reel.">
+    <meta name="Philip Burtenshaw" content="Philip Burtenshaw Web Design.">
 
 <!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159448388-1"></script>
