corrected html validator error

--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
 
         gtag('config', 'UA-159448388-1');
 </script>
-</script>
 </head>
 
 <body> 
-        <h1>Philip Burtenshaw Web Design.<h1>
-        <img src="duotone.png">
-  
-  </body>
+        <h1>Philip Burtenshaw Web Design.</h1>
+        <img src="duotone.png" alt="Laptop">
+</body>   
   </html>
