Clean File Uploads

--- a/base-0.html
+++ b/base-0.html
@@ -2,11 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="robots" content="noindex">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>Sample web page with default styling</title>
+    
     <meta name="description" content="A sample web page without a linked stylesheet file.">
 
-    <meta name="Philip Burtenshaw" content="Philip Burtenshaw Web Design.">
+    <meta name="author" content="Philip Burtenshaw">
 
 <!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159448388-1"></script>
