--- a/base-1.html
+++ b/base-1.html
@@ -10,7 +10,7 @@
 
   <meta name="description" content="A sample web page with desktop-only styles in a linked stylesheet.">
   
-  <meta name="Philip Burtenshaw" content="Philip Burtenshaw">
+  <meta name="author" content="Philip Burtenshaw">
 
   <link rel="stylesheet" href="base-1.css">
 
@@ -25,7 +25,6 @@
 </script>
 
 </head>
-
 
 <body>
   <h1>Heading 1</h1>
