--- a/base-2.html
+++ b/base-2.html
@@ -7,10 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <title>Web page with responsive layout</title>
-
   <meta name="description" content="A sample web page with a linked stylesheet for responsive layout.">
 
-  <meta name="Philip Burtenshaw" content="Philip Burtenshaw">
+  <meta name="author" content="Philip Burtenshaw">
 
   <link rel="stylesheet" href="base-2.css">
 
