--- a/base-3.html
+++ b/base-3.html
@@ -10,7 +10,7 @@
 
   <meta name="description" content="A sample web page with responsive layout and fluid typography in a linked stylesheet.">
 
-  <meta name="Philip Burtenshaw" content="Philip Burtenshaw">
+  <meta name="author" content="Philip Burtenshaw">
 
   <link rel="stylesheet" href="base-3.css">
 
