--- a/base-4.html
+++ b/base-4.html
@@ -10,7 +10,7 @@
 
   <meta name="description" content="A sample responsive web page with examples of unordered and ordered lists.">
 
-  <meta name="Philip Burtenshaw" content="Philip Burtenshaw">
+  <meta name="author" content="Philip Burtenshaw">
 
   <link rel="stylesheet" href="base-4.css">
 
