--- a/base-5.html
+++ b/base-5.html
@@ -10,7 +10,7 @@
 
   <meta name="description" content="A sample responsive web page with examples of Google Fonts.">
 
-  <meta name="Philip Burtenshaw" content="Philip Burtenshaw">
+  <meta name="author" content="Philip Burtenshaw">
 
   <link rel="stylesheet" href="base-5.css">
 
