--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
 
   <meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="robots" content="noindex">  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="Philip Burtenshaw">
-    
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
   <title>Philip Burtenshaw Web Design.</title>
+  <meta name="description" content="Working Version of Philip Burtenshaw Web Design Home.">
+  <meta name="author" content="Philip Burtenshaw">
+
+  <link rel="stylesheet" href="index.css">
+
+  <!-- Link to Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i&display=swap" rel="stylesheet">
+
+   <!-- Link to icons for Font Awesome 5 -->
+   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" rel="stylesheet">
 
 <!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159448388-1"></script>
