--- a/how-to-set-up-a-website/index.html
+++ b/how-to-set-up-a-website/index.html
@@ -30,31 +30,24 @@
 
 <body>
 
-<div class="page-wrapper">
+	<div class="page-wrapper">
 
 		<h1>How to set up a domain name and website in four easy-to-follow, quick and affordable steps.</h1>
 
 		<div class="box-introduction">
-			<p>Follow the steps in this short guide to discover how you can purchase a domain name and a web host. You will also learn how to link your chosen domain with the web hosting 
-			computer than stores your web pages.</p>
+			<p>Follow the steps in this short guide to discover how you can purchase a domain name and a web host. You will also learn how to link your chosen domain with the web hosting computer than stores your web pages.</p>
 		</div>
 
 		<div class="box-highlight">
-     <h4>What you will learn:</h4>
-     <ul>
-        <li>How to set up a domain name.</li>
-        <li>How to create a web hosting account.</li>
-        <li>How to connect your domain name to your web host.</li>
-        <li>How to transfer files between your computer and your web host.</li>
-     </ul>
- </div>
+			<h4>What you will learn:</h4>
+			<ul>
+				<li>How to set up a domain name.</li>
+				<li>How to create a web hosting account.</li>
+				<li>How to connect your domain name to your web host.</li>
+				<li>How to transfer files between your computer and your web host.</li>
+			</ul>
+		</div>
 
- <div class="box-highlight">
-	<h4>Important Note</h4>
-	<p>Commercial websites are included in this document as examples only. Mention of any one provider does not imply an endorsement or recommendation for the service sit offers.</p>
-	<p>As with any purchasing decision, intending consumers of domain names and web hosting services should research the market carefully and choose the services that best meet their requirements and budget.</p>
-</div>
-	
 		<h2>Overview</h2>
 		<p>On your mobile phone, you probably have a list of contacts with whom you communicate regularly. For each contact, you can add an easy-to-remember textual name (for example, <b>Mary Smith</b>) and link it with telephone number (for example, <b>088 123 45678</b>).
 		
@@ -155,23 +148,25 @@
 		<h2>4: How to upload files to your website</h2>
 		<p>Typically, the control panel of your web hosting account includes an option to transfer (upload or download) files between your computer and your website. These files might be web pages (.html files), stylesheet (.css files) and images (.jpg or .png files).</p>
 		
-		<p>Another option is for transferring files is to use a software program called an FTP client. The three letters stand for File Transfer Protocol. A popular FTP client, with free-to-use versions for Windows, Mac and Linux is <a href="https://filezilla-project.org/" target="_blank">FileZilla</a>.</p>
+		<p>Another option is for transferring files is to use a software program called an FTP client. The three letters stand for File Transfer Protocol. A popular FTP client, with a free-to-use version for Windows, Mac and Linux, is <a href="https://filezilla-project.org/" target="_blank">FileZilla</a>.</p>
 
 		<a href="https://filezilla-project.org/" target="_blank">
-			<img src="assets/img/filezilla-download.png"  alt="FileZilla FTP client">
+			<img src="assets/img/filezilla-download.png" alt="FileZilla FTP client">
 		</a>
 
 		<h3>Setting up your connection details</h3>
 		<p>FileZilla and other FTP clients allow you to store the connection details for your one or more web hosting accounts. As a result, you do not need to enter these details every time you want to upload/download files to/from your website.</p>
 		
-		<img src="assets/img/filezilla-account.png" alt="FileZilla site connection details">
+		<img src="assets/img/filezilla-account.png" alt="FileZilla site connection details" >
+		
+		<div class="box-highlight">
+			<h4>Important Note</h4>
+			<p>Commercial websites are included in this document as examples only. Mention of any one provider does not imply an endorsement or recommendation for the service sit offers.</p>
+			<p>As with any purchasing decision, intending consumers of domain names and web hosting services should research the market carefully and choose the services that best meet their requirements and budget.</p>
+		</div>
 
-		<h4>Important Note</h4>
-		<p>Commercial websites are included in this document as examples only. Mention of any one provider does not imply an endorsement or recommendation for the service sit offers.</p>
+	</div>
 
-		<p>As with any purchasing decision, intending consumers of domain names and web hosting services should research the market carefully and choose the services that best meet their requirements and budget.</p>
-
-</div>
 	<!-- JavaScript for Cookie Consent Popup Message -->
 	<script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
 	<script>
