--- a/software/index.html
+++ b/software/index.html
@@ -16,6 +16,9 @@
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,900,900i&display=swap" rel="stylesheet">
 
+	<!-- Link to icons for Font Awesome 5 -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+
 	<!-- Styles for Cookie Consent Popup Message  -->
 	<link href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" rel="stylesheet">
 
@@ -30,12 +33,15 @@
 	</script>
 </head>
 
+
 <body>
+
 	<!-- Begin hero block -->
-	<div class="container-flexbox">
+	<div class="container-flexbox hero-block">
 		<div class="item item-2">
 			<h1>Putting the tricks into web analytics</h1>
 			<p>IBAT Analytics helps you boost your business impact.</p>
+			<a class="btn-cta" href="#free-trial">Try it free</a>
 		</div>
 		<div class="item item-2">
 			<img src="assets/img/hero-image.png" alt="hero image">
@@ -132,13 +138,13 @@
 		<div class="item-3">
 			<img src="assets/img/face-2.png"  alt="Joe Bloggs">
 			<p><i>"Excellent service"</i></p>
-			<p><b>Phiip Burtenshaw</b></p>
+			<p><b>Joe Bloggs</b></p>
 		</div>
 
 		<div class="item-3">
 			<img src="assets/img/face-1.png"  alt="Mary Murphy">
 			<p><i>"Best SAAS platform"</i></p>
-			<p><b>Marcus Rashford</b></p>
+			<p><b>Mary Smith</b></p>
 		</div>
 
 		<div class="item-3">
@@ -148,6 +154,27 @@
 		</div>
 
 	</div><!-- End parent flexbox container -->
+
+
+<!-- Begin container for email signup form -->
+<div class="container-form-email-signup" id="free-trial">
+
+		<h3>Start your free trial</h3>
+        <p>Enjoy unlimited access for 14 days. No credit card required.</p>
+
+        <!-- Forn begins here -->
+		<form id="email-signup-form" name="email-signup-form" accept-charset="utf-8"  method="post" action="https://formspree.io/ibat.training@gmail.com">
+			<div class="flex-row">
+				<label for="email-address">Email:</label>
+                <input type="text" id="email-address" name="email-address" placeholder="Your email address" maxlength="80" autocapitalize="none" required>
+                <input type="hidden" name="_subject" id="email-subject" value="Email Signup Form Submission">
+				<button id="btn-submit" type="submit" class="btn-submit">Try it free <i class="fas fa-arrow-right"></i></button>
+			</div>
+		</form>
+        <!-- Form ends here -->
+
+    </div>
+	<!-- End container for email signup form -->
 
 	<!-- JavaScript for Cookie Consent Popup Message -->
 	<script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
