--- a/travel/about-us.html
+++ b/travel/about-us.html
@@ -14,7 +14,10 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 
 	<!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,700,700i%7CRoboto+Slab:400,700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,700,700i%7CRoboto+Slab:400,700&display=swap" rel="stylesheet">
+	
+	 <!-- Link to icons for Font Awesome 5 -->
+	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 
 	<!-- Styles for Cookie Consent Popup Message  -->
 	<link href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" rel="stylesheet">
@@ -45,7 +48,7 @@
     <div class="container-flexbox">
         <div class="item-1">
             <h2>At your service</h2>
-            <p>At <a href="index5.html">IBAT Tours</a>, we pride ourselves at putting you, the customer, at the centre of everything thing we do. We have been voted 'Best Travel Agency' for five of the past seven years. <a href="destinations.html">Where can we help you go today?</a></p>
+            <p>At <a href="index.html">IBAT Tours</a>, we pride ourselves at putting you, the customer, at the centre of everything thing we do. We have been voted 'Best Travel Agency' for five of the past seven years. <a href="destinations.html">Where can we help you go today?</a></p>
         </div>    
     </div><!-- End parent flexbox container -->
 
