--- a/travel/destinations.html
+++ b/travel/destinations.html
@@ -16,6 +16,9 @@
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,700,700i%7CRoboto+Slab:400,700&display=swap" rel="stylesheet">
 
+	 <!-- Link to icons for Font Awesome 5 -->
+	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+
 	<!-- Styles for Cookie Consent Popup Message  -->
 	<link href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" rel="stylesheet">
 
@@ -45,7 +48,7 @@
 	<div class="container-flexbox">
 		<div class="item-1">
 			<h2>Taking you there</h2>
-			<p><a href="index5.html">IBAT Tours</a> offers a wide range of must-see destinations across three continents. No one takes you to more places at such affordable prices.</p>
+			<p><a href="index.html">IBAT Tours</a> offers a wide range of must-see destinations across three continents. No one takes you to more places at such affordable prices.</p>
 		</div>
 	</div><!-- End parent flexbox container -->
 
