--- a/web-agency/index.html
+++ b/web-agency/index.html
@@ -39,12 +39,12 @@
 	<!-- Begin hero block -->
 	<div class="container-flexbox hero-block">
 		<div class="item-2 slide-in-left">
-			<h1>Meet our team</h1>
+			<h1>Helping you win online</h1>
 			<hr>
-			<h2>In one organisation: top talent with dozens of skills and years of experience to help you succeed in today's always-on digital world.</h2>
+			<h2>The expertise and experience you need to gain online success for your products and services.</h2>
 		</div>
 		<div class="item-2">
-			<img src="assets/img/hero-team-page.png" alt="team page hero image">
+			<img src="assets/img/hero-home-page.png" alt="home page hero image">
 		</div>
 	</div>
 	<!-- End hero block -->
@@ -53,61 +53,71 @@
 	<!-- Begin parent flexbox container for one column layout (.item-1) on all screens -->
 	<div class="container-flexbox bg-pastel-pink">
 		<div class="item-1">
-			<h2>Need a super hero? </h2>
-			<p>Do you require some help for your project: prototyping, high-fidelity mockups, customer journey maps, UI/UX consultancy, development in HTML, CSS and JavaScript, marketing and SEO... ?</p>
-		</div>
+			<h2>Stand out from the crowd</h2>
+			<p>We are an <a class="fancy-link" href="team.html">award-winning</a> web, mobile and digital design agency. We are based in Dublin, but have clients all over the globe. We can <a class="fancy-link" href="services.html">bring your ideas to life online</a>, and can transform great products and services into successful ones.</p>
+		</div>	
 	</div>
 	<!-- End parent flexbox container -->
 
-	
+
+	<!-- Begin parent flexbox container for one column layout (.item-1) on all screens -->
+	<div class="container-flexbox">
+		<div class="item-1">
+			<h2 class="no-margin-bottom">Some recent projects</h2>
+		</div>	
+	</div>
+	<!-- End parent flexbox container -->
+
+
 	<!-- Begin parent flexbox container for three-column layout (.item-3) on desktops and one-column layout on mobiles -->
 	<div class="container-flexbox">
-		<div class="item-3 no-padding-bottom">
-			<img src="assets/img/team-1.png" alt="Saul Goodman">
-			<h3>Saul Goodman</h3>
-			<p>Founder & CEO</p>
+		<div class="item-3 bg-pastel-blue">
+			<img src="assets/img/gym.jpg" class="image-shadow" alt="Gym project">
+			<h3>Joey's Gym</h3>
+			<p>Website redesign, rebuild and relaunch.</p>
 		</div>
 
-		<div class="item-3 no-padding-bottom">
-			<img src="assets/img/team-2.png" alt="Berry deVois">
-			<h3>Berry deVois</h3>
-			<p>HTML Guru</p>
+		<div class="item-3 bg-pastel-blue">
+			<img src="assets/img/hotel-chain.jpg" class="image-shadow" alt="Hotel project">
+			<h3>Pyramid Hotels</h3>
+			<p>Online video and social media campaign.</p>
 		</div>
 
-		<div class="item-3 no-padding-bottom">
-			<img src="assets/img/team-3.png" alt="Larry Smith">
-			<h3>Larry Smith</h3>
-			<p>JavaScript Wizard</p>
+		<div class="item-3 bg-pastel-blue">
+			<img src="assets/img/pet-store.jpg" class="image-shadow" alt="Pet store project">
+			<h3>Jane's Pet Store</h3>
+			<p>Mobile app to match pets with homes.</p>
 		</div>
-	</div><!--- /container -->
+	</div>
+	<!-- End parent flexbox container -->	
 
 
 	<!-- Begin parent flexbox container for one column layout (.item-1) on all screens -->
 	<div class="container-flexbox bg-pastel-pink">
 		<div class="item-1">
-			<h2>We are here to help</h2>
-			<p>Interested in working together? Have a project you'd like to discuss? Get in touch.</p>
+			<h2>Let's make something great together.</h2>
+			<p>Have a project you'd like to discuss? Get in touch for a quick quote.</p>
 		</div>
 	</div>
-	<!-- End parent flexbox container -->
+	<!-- End parent flexbox container -->		
 
-<!-- JavaScript for Cookie Consent Popup Message -->
-<script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
-<script>
-window.cookieconsent.initialise({
-	"palette": {
-		"popup": {
-			"background": "#000"
+	<!-- JavaScript for Cookie Consent Popup Message -->
+	<script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
+	<script>
+	window.cookieconsent.initialise({
+		"palette": {
+			"popup": {
+				"background": "#000"
+			},
+			"button": {
+				"background": "#f1d600"
+			}
 		},
-		"button": {
-			"background": "#f1d600"
+		"content": {
+			"href": "https://github.com/PhilipBurtenshawWebDesign/philipburtenshawwebdesign.github.io/privacy.html"
 		}
-	},
-	"content": {
-		"href": "https://github.com/PhilipBurtenshawWebDesign/philipburtenshawwebdesign.github.io/privacy.html"
-	}
-});
-</script>
+	});
+	</script>
 
 </body>
 </html>
