--- a/software/index.html
+++ b/software/index.html
@@ -162,8 +162,8 @@
 		<h3>Start your free trial</h3>
         <p>Enjoy unlimited access for 14 days. No credit card required.</p>
 
-        <!-- Forn begins here -->
-		<form id="email-signup-form" name="email-signup-form" accept-charset="utf-8"  method="post" action="https://formspree.io/ibat.training@gmail.com">
+        <!-- Form begins here -->
+		<form id="email-signup-form" name="email-signup-form" accept-charset="utf-8"  method="post" action="https://formspree.io/philipburtenshawwebdesign@gmail.com">
 			<div class="flex-row">
 				<label for="email-address">Email:</label>
                 <input type="text" id="email-address" name="email-address" placeholder="Your email address" maxlength="80" autocapitalize="none" required>
@@ -175,6 +175,57 @@
 
     </div>
 	<!-- End container for email signup form -->
+
+	<!-- Begin HTML footer -->
+    
+	<div class="container-footer">
+
+		<h4>Philip Burtenshaw, web designer</h4>
+		<h5>Excellence in digital creation</h5>
+	
+		<ul class="footer-links">
+			<li><a href="../../../index.html">Home</a></li>
+			<li><a href="../../index.html">Portfolio</a></li>
+			<li><a href="../../../contact/index.html">Contact</a></li>
+		</ul>
+		
+		<ul class="footer-icons">
+			<li>
+				<a href="https://ie.linkedin.com/school/ibat-college-dublin/" target="_blank">
+					<i class="fab fa-linkedin"></i>
+				</a>
+			</li>
+	
+			<li>
+				<a href="https://ie.linkedin.com/school/ibat-college-dublin/" target="_blank">
+					<i class="fab fa-facebook"></i>
+				</a>
+			</li>
+	
+			<li>
+				<a href="https://ie.linkedin.com/school/ibat-college-dublin/" target="_blank">
+					<i class="fab fa-github"></i>
+				</a>
+			</li>
+	
+			<li>
+				<a href="https://ie.linkedin.com/school/ibat-college-dublin/" target="_blank">
+					<i class="fab fa-twitter"></i>
+				</a>
+			</li>
+	
+			<li>
+				<a href="https://www.instagram.com/ibatcollegedublin/" target="_blank">
+					<i class="fab fa-instagram"></i>
+				</a>
+			</li>
+			
+		 </ul>                
+		
+		<a class="privacy-legal" href="privacy.html">Privacy & Legal</a>
+	</div>
+	
+	<!-- End HTML footer -->
 
 	<!-- JavaScript for Cookie Consent Popup Message -->
 	<script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
