--- a/travel/contact-us.html
+++ b/travel/contact-us.html
@@ -93,6 +93,57 @@
 	</div>
 	<!-- End container for contact form -->
 
+	<!-- Begin HTML footer -->
+    
+	<div class="container-footer">
+
+		<h4>Philip Burtenshaw, web designer</h4>
+		<h5>Excellence in digital creation</h5>
+	
+		<ul class="footer-links">
+			<li><a href="../../../index.html">Home</a></li>
+			<li><a href="../../index.html">Portfolio</a></li>
+			<li><a href="../../../contact/index.html">Contact</a></li>
+		</ul>
+		
+		<ul class="footer-icons">
+			<li>
+				<a href="https://ie.linkedin.com/school/ibat-college-dublin/" target="_blank">
+					<i class="fab fa-linkedin"></i>
+				</a>
+			</li>
+	
+			<li>
+				<a href="https://ie.linkedin.com/school/ibat-college-dublin/" target="_blank">
+					<i class="fab fa-facebook"></i>
+				</a>
+			</li>
+	
+			<li>
+				<a href="https://ie.linkedin.com/school/ibat-college-dublin/" target="_blank">
+					<i class="fab fa-github"></i>
+				</a>
+			</li>
+	
+			<li>
+				<a href="https://ie.linkedin.com/school/ibat-college-dublin/" target="_blank">
+					<i class="fab fa-twitter"></i>
+				</a>
+			</li>
+	
+			<li>
+				<a href="https://www.instagram.com/ibatcollegedublin/" target="_blank">
+					<i class="fab fa-instagram"></i>
+				</a>
+			</li>
+			
+		 </ul>                
+		
+		<a class="privacy-legal" href="privacy.html">Privacy & Legal</a>
+	</div>
+	
+	<!-- End HTML footer -->
+
 	<!-- JavaScript for Cookie Consent Popup Message -->
 	<script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
 	<script>
