--- a/index.html
+++ b/index.html
@@ -15,24 +15,32 @@
 
   <!-- Link to Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i&display=swap" rel="stylesheet">
 
    <!-- Link to icons for Font Awesome 5 -->
    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" rel="stylesheet">
 
-<!-- Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159448388-1"></script>
+   <!-- Google Analytics -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159448388-1"></script>
         <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
         gtag('config', 'UA-159448388-1');
-</script>
+   </script>
 </head>
 
-<body> 
-        <h1>Philip Burtenshaw Web Design.</h1>
-        <img src="duotone.png" alt="Laptop">
-</body>   
+<style>
+body { 
+background-image: url('duotone.png');
+background-repeat: no-repeat;
+background-attachment: fixed;  
+background-size: cover;
+        }
+</style>
+<body>
+<h1 style="font-size:60px;">Philip Burtenshaw Web Design<h1>
+
+</body>
+       
   </html>
