--- a/smoothies/index.html
+++ b/smoothies/index.html
@@ -35,6 +35,73 @@
 </head>
 
 <body>
+
+		<!-- Begin desktop menu -->
+		<div class="container-menu-desktop menu-transparent menu-sticky">
+		 <!-- first child item -->
+		 <a href="#"><img src="assets/img/smoothies-logo.png" alt="website logo"></a>  
+		 <!-- second child item -->
+		 <ul>
+			 <li><a href="#watermelon">Watermelon</a></li>
+			 <li><a href="#apple">Apple</a></li>
+			 <li><a href="#blueberry">Blueberry</a></li>
+			 <li><a href="#lemon">Lemon</a></li>
+			 <li><a href="#signup" class="btn-cta"><i class="fas fa-envelope"></i> Newsletter</a></li>  
+		   </ul>
+		 </div>
+		 <!-- End desktop menu -->
+	 	 
+		 <!-- Begin mobile menu bar -->
+		 <div class="container-menu-bar-mobile menu-transparent menu-sticky">
+			 <!-- first child -->
+			 <a href="#"><img src="assets/img/smoothies-logo.png" alt="website logo"></a>  
+			 <!-- second child -->
+			 <div class="item-icon">
+				 <div class="bar1"></div>
+				 <div class="bar2"></div>
+				 <div class="bar3"></div>
+			 </div>
+		 </div>
+		 <!-- End mobile menu bar -->
+	 
+		 <!-- Begin mobile menu slide-out options -->
+		 <div class="flyout-menu flyout-menu-is-closed menu-light">
+			 <ul>
+				 <li><a href="#watermelon">Watermelon</a></li>
+				 <li><a href="#apple">Apple</a></li>
+				 <li><a href="#blueberry">Blueberry</a></li>
+				 <li><a href="#lemon">Lemon</a></li>
+				 <li><a href="#signup" class="btn-cta"><i class="fas fa-envelope"></i> Newsletter</a></li>
+			 </ul>
+	 
+			 <hr>
+			 <h4>About Me</h4>
+			 <div class="fly-out-profile-box">
+				 <img src="../../../assets/img/profile-pic.jpg" alt="Philip Burtenshaw, web designer, Dublin">	
+				 <p>Hi, I'm <b>Philip Burtenshaw</b>, a web and digital designer based in Dublin, Ireland.</p>
+			 </div>
+	 
+			 <h4>Contact</h4>
+			 <p>Have a project you'd like to discuss? Let's make something great together!</p>
+	 
+			 <h5><a href="tel:0861234567">086 123 4567</a></h5>
+	 
+			 <h5><a href="mailto:philipburtenshawwebdesign@gmail.com" target="_blank">philipburtenshawwebdesign@gmail.com</a></h5>
+	 
+			 <h4>Social Links</h4>
+			 <div class="fly-out-social-icons">
+				 <a href="https://github.com/PhilipBurtenshawWebDesign/philipburtenshawwebdesign.github.io" target="_blank"><i class="fab fa-github-square fa-fw"></i></a>
+				 <a href="https://ie.linkedin.com/school/ibat-college-dublin/" target="_blank"><i class="fab fa-linkedin fa-fw"></i></a>
+				 <a href="https://ie.linkedin.com/school/ibat-college-dublin/" target="_blank"><i class="fab fa-twitter-square"></i></a>
+				 <a href="https://www.instagram.com/ibatcollegedublin/" target="_blank"><i class="fab fa-instagram"></i></a>
+				 <a href="https://www.facebook.com/IBATcollege" target="_blank"><i class="fab fa-facebook-square"></i></a>
+			 </div>
+			 <p>&nbsp;</p>
+			 <p>&nbsp;</p>
+			 <p>&nbsp;</p>
+		 </div>
+		 <!-- End mobile menu slide-out options -->
+
 	<!-- Begin hero block -->
 	<div class="container-hero">
 		<h1>Smooth Smoothies</h1>
@@ -50,7 +117,7 @@
 	</div><!-- End parent flexbox container -->
 
 	<!-- Begin parent flexbox container for two-column layout (.item-2) on desktops and one-column layout on mobiles -->
-	<div class="container-flexbox bg-watermelon">
+	<div class="container-flexbox bg-watermelon" id="watermelon">
 
 		<div class="item-2">
 			<h2>Watermelon Wonder</h2>
@@ -64,7 +131,7 @@
 	</div><!-- End parent flexbox container -->
 
 	<!-- Begin parent flexbox container for two-column layout (.item-2) on desktops and one-column layout on mobiles -->
-	<div class="container-flexbox bg-apple">
+	<div class="container-flexbox bg-apple" id="apple">
 
 		<div class="item-2">
 			<img src="assets/img/apple.png" alt="Apple Delight smoothie">
@@ -78,7 +145,7 @@
 	</div><!-- End parent flexbox container -->
 
 	<!-- Begin parent flexbox container for two-column layout (.item-2) on desktops and one-column layout on mobiles -->
-	<div class="container-flexbox bg-blueberry">
+	<div class="container-flexbox bg-blueberry" id="blueberry">
 
 		<div class="item-2">
 			<h2>Blueberry Surprise</h2>
@@ -92,7 +159,7 @@
 	</div><!-- End parent flexbox container -->
 
 	<!-- Begin parent flexbox container for two-column layout (.item-2) on desktops and one-column layout on mobiles -->
-	<div class="container-flexbox bg-lemon">
+	<div class="container-flexbox bg-lemon" id="lemon">
 
 		<div class="item-2">
 			<img src="assets/img/lemon.png" alt="Lemon Luxury smoothie">
@@ -105,7 +172,7 @@
 	</div><!-- End parent flexbox container -->
 
 	<!-- Begin container for email signup form -->
-	<div class="container-form-email-signup">
+	<div class="container-form-email-signup" id="signup">
 
 		<h3>Join our email list</h3>
         <p>Keep me up-to-date with your latest healthy smoothie recipes and special offers.</p>
@@ -151,7 +218,7 @@
 		</li>
 
 		<li>
-			<a href="https://ie.linkedin.com/school/ibat-college-dublin/" target="_blank">
+			<a href="https://github.com/PhilipBurtenshawWebDesign/philipburtenshawwebdesign.github.io" target="_blank">
 				<i class="fab fa-github"></i>
 			</a>
 		</li>
@@ -175,6 +242,76 @@
 
 <!-- End HTML footer -->
 
+<!-- Begin JavaScript code for desktop and mobile menus -->
+<script>
+
+	// Code to detect click of option within fly-out menu
+	let specifiedElement = document.querySelector('.flyout-menu');
+	document.addEventListener('click', function(event) {
+		var isClickInside = specifiedElement.contains(event.target);
+		//If link is within current web page
+		if (isClickInside) {
+			//Close fly-out menu
+			toggleMobileMenu();
+		}
+		else {
+			return;
+		}
+	});
+
+	// Code to show/hide fly-out mobile menu -->
+	document.querySelector('.item-icon').addEventListener('click', toggleMobileMenu)
+	const pageContainer = document.querySelector('.page-container');
+
+	function toggleMobileMenu() {
+		//toggle hamburger icon
+		const elemIcon = document.querySelector('.item-icon');
+		elemIcon.classList.toggle("change");
+		const elemHTML = document.querySelector('html');
+		const elemBody = document.querySelector('body');            
+		const elemFlyOut = document.querySelector('.flyout-menu');
+
+		//if fly-out menu is currently closed, open it.
+		if (elemIcon.classList.contains('change')) {
+			elemFlyOut.classList.remove('flyout-menu-is-closed');
+			elemFlyOut.classList.add('flyout-menu-is-open');
+			elemHTML.classList.add('no-scroll');
+			elemBody.classList.add('no-scroll');
+		}    
+		//if fly-out menu is currently open, close it.
+		else {
+			elemFlyOut.classList.remove('flyout-menu-is-open');
+			elemFlyOut.classList.add('flyout-menu-is-closed');
+			elemHTML.classList.remove('no-scroll');
+			elemBody.classList.remove('no-scroll');                                
+		}
+	}
+
+	// Code for menus with transparent background
+	window.onscroll = function() {swapMenuStyle()};
+	const headerDesktop = document.querySelector('.container-menu-desktop');
+	const headerMobile = document.querySelector('.container-menu-bar-mobile');
+
+	const stickyDesktop = headerDesktop.offsetTop +300;
+	const stickyMobile = headerDesktop.offsetTop  +300;
+
+	function swapMenuStyle() {
+		if (window.pageYOffset > stickyDesktop) {
+			headerDesktop.classList.add("menu-light","menu-drop-shadow");
+			headerDesktop.classList.remove("menu-transparent");
+			headerMobile.classList.add("menu-light","menu-drop-shadow");
+			headerMobile.classList.remove("menu-transparent");
+
+		} else {
+			headerDesktop.classList.add("menu-transparent");
+			headerDesktop.classList.remove("menu-light","menu-drop-shadow");
+			headerMobile.classList.add("menu-transparent");
+			headerMobile.classList.remove("menu-light","menu-drop-shadow");
+		}
+	}
+
+</script>
+	<!-- End JavaScript code for desktop and mobile menus -->
 
 	<!-- JavaScript for Cookie Consent Popup Message -->
 	<script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
