--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ background-size: cover;
         }
 </style>
 <body>
-<h1 style="font-size:60px;">Philip Burtenshaw Web Design<h1>
+<h1>Philip Burtenshaw Web Design<h1>
 
 </body>
        
