--- a/software/index.html
+++ b/software/index.html
@@ -5,16 +5,16 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Analytics Software | IBAT Web Design Portfolio Project | Philip Burtenshaw</title>
+	<title>Smooth Smoothies | IBAT Web Design Portfolio Project | Philip Burtenshaw</title>
 
-	<meta name="description" content="IBAT Analytics tells you all you need to know about your website traffic, without tracking or storing visitors' personal information.">
-	
+	<meta name="description" content="Dublin's finest smoothie store. Offering tasty alternatives to sugary and unhealthy snacks for busy, on-the-go, on-trend professionals.">
+
 	<meta name="author" content="Philip Burtenshaw">
 
 	<link href="assets/css/style.css" rel="stylesheet">
 
 	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,900,900i&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Neucha&display=swap" rel="stylesheet">
 
 	<!-- Link to icons for Font Awesome 5 -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
@@ -31,12 +31,13 @@
 	
 		  gtag('config', 'UA-159448388-1');
 	</script>
+
 </head>
 
-
 <body>
-	 <!-- Begin desktop menu -->
-	 <div class="container-menu-desktop menu-dark menu-sticky">
+
+    <!-- Begin desktop menu -->
+    <div class="container-menu-desktop menu-dark menu-sticky">
         <!-- first child item -->
         <a href="../../index.html"><img src="assets/img/software-logo.png" alt="website logo"></a>
         <!-- second child item -->
@@ -49,41 +50,41 @@
     </div>
     <!-- End desktop menu -->
 
-<!-- Begin mobile menu bar -->
-<div class="container-menu-bar-mobile menu-dark menu-sticky">
-	<!-- first child -->
-	<a href="#"><img src="assets/img/software-logo.png" alt="website logo"></a>  
-	<!-- second child -->
-	<div class="item-icon">
-		<div class="bar1"></div>
-		<div class="bar2"></div>
-		<div class="bar3"></div>
+	<!-- Begin mobile menu bar -->
+	<div class="container-menu-bar-mobile menu-light menu-sticky">
+		<!-- first child -->
+		<a href="#"><img src="assets/img/software-logo.png" alt="website logo"></a>  
+		<!-- second child -->
+		<div class="item-icon">
+			<div class="bar1"></div>
+			<div class="bar2"></div>
+			<div class="bar3"></div>
+		</div>
 	</div>
-</div>
-<!-- End mobile menu bar -->
+	<!-- End mobile menu bar -->
 
-  <!-- Begin mobile menu slide-out options -->
-  <div class="flyout-menu flyout-menu-is-closed menu-dark">
-	<ul>
-		<li><a href="#features">Features</a></li>
-		<li><a href="#benefits">Benefits</a></li>
-		<li><a href="#testimonials">Testimonials</a></li>
-		<li><a href="#free-trial" class="btn-cta">Free Trial</a></li>  
-	</ul>
+    <!-- Begin mobile menu slide-out options -->
+    <div class="flyout-menu flyout-menu-is-closed menu-dark">
+		<ul>
+			<li><a href="#features">Features</a></li>
+			<li><a href="#benefits">Benefits</a></li>
+			<li><a href="#testimonials">Testimonials</a></li>
+			<li><a href="#free-trial" class="btn-cta">Free Trial</a></li>  
+		</ul>
 
         <hr>
         <h4>About Me</h4>
         <div class="fly-out-profile-box">
-            <img src="face-webdev.jpg">
+			<img src="../../../assets/img/profile-pic.jpg" alt="Philip Burtenshaw, web designer, Dublin">
             <p>Hi, I'm <b>Philip Burtenshaw</b>, a web and digital designer based in Dublin, Ireland.</p>
         </div>
    
         <h4>Contact</h4>
         <p>Have a project you'd like to discuss? Let's make something great together!</p>
 
-        <h5><a href="tel:0861234567">086 123 4567</a></h5>
+        <h5><a href="tel:0881234567">088 123 4567</a></h5>
 
-        <h5><a href="mailto:philipburtenshawwebdesign@gmail.com" target="_blank">philipburtenshawwebdesign@gmail.com</a></h5>
+		<h5><a href="mailto:philipburtenshawwebdesign@gmail.com" target="_blank">philipburtenshawwebdesign@gmail.com</a></h5>
 
         <h4>Social Links</h4>
         <div class="fly-out-social-icons">
@@ -101,12 +102,12 @@
 
 	<!-- Begin hero block -->
 	<div class="container-flexbox hero-block">
-		<div class="item item-2">
+		<div class="item-2">
 			<h1>Putting the tricks into web analytics</h1>
 			<p>IBAT Analytics helps you boost your business impact.</p>
 			<a class="btn-cta" href="#free-trial">Try it free</a>
 		</div>
-		<div class="item item-2">
+		<div class="item-2">
 			<img src="assets/img/hero-image.png" alt="hero image">
 		</div>
 	</div>
@@ -157,7 +158,7 @@
 		</div>
 	</div><!-- End parent flexbox container -->
 
-	<!-- Begin parent flexbox container for three-column layout (.item-3) on desktops and one-column layout on mobiles -->
+	<!-- Begin parent flexbox containr for three-column layout (.item-3) on desktops and one-column layout on mobiles -->
 	<div class="container-flexbox bg-light-gray">
 
 		<div class="item-3">
@@ -188,7 +189,7 @@
 	</div><!-- End parent flexbox container -->
 	
 	<!-- Begin parent flexbox container for one column layout (.item-1) on all screens -->
-	<div class="container-flexbox bg-light-gray" id="testimonials"
+	<div class="container-flexbox bg-light-gray" id="testimonials">
 		<div class="item-1">
 			<h2>Happy users</h2>
 			<p>Join the 1,000s of delighted customers from every sector of business around the world who are using IBAT Analytics to drive their future success.</p>
@@ -239,56 +240,56 @@
     </div>
 	<!-- End container for email signup form -->
 
-	<!-- Begin HTML footer -->
+<!-- Begin HTML footer -->
     
-	<div class="container-footer">
+<div class="container-footer">
 
-		<h4>Philip Burtenshaw, web designer</h4>
-		<h5>Excellence in digital creation</h5>
+	<h4>Philip Burtenshaw, web designer</h4>
+	<h5>Excellence in digital creation</h5>
+
+	<ul class="footer-links">
+		<li><a href="../../../index.html">Home</a></li>
+		<li><a href="../../index.html">Portfolio</a></li>
+		<li><a href="../../../index.html">Contact</a></li>
+	</ul>
 	
-		<ul class="footer-links">
-			<li><a href="../../../index.html">Home</a></li>
-			<li><a href="../../index.html">Portfolio</a></li>
-			<li><a href="../../../index.html">Contact</a></li>
-		</ul>
+	<ul class="footer-icons">
+		<li>
+			<a href="https://ie.linkedin.com/school/ibat-college-dublin/" target="_blank">
+				<i class="fab fa-linkedin"></i>
+			</a>
+		</li>
+
+		<li>
+			<a href="https://ie.linkedin.com/school/ibat-college-dublin/" target="_blank">
+				<i class="fab fa-facebook"></i>
+			</a>
+		</li>
+
+		<li>
+			<a href="https://github.com/PhilipBurtenshawWebDesign/philipburtenshawwebdesign.github.io" target="_blank">
+				<i class="fab fa-github"></i>
+			</a>
+		</li>
+
+		<li>
+			<a href="https://ie.linkedin.com/school/ibat-college-dublin/" target="_blank">
+				<i class="fab fa-twitter"></i>
+			</a>
+		</li>
+
+		<li>
+			<a href="https://www.instagram.com/ibatcollegedublin/" target="_blank">
+				<i class="fab fa-instagram"></i>
+			</a>
+		</li>
 		
-		<ul class="footer-icons">
-			<li>
-				<a href="https://ie.linkedin.com/school/ibat-college-dublin/" target="_blank">
-					<i class="fab fa-linkedin"></i>
-				</a>
-			</li>
+	 </ul>                
 	
-			<li>
-				<a href="https://ie.linkedin.com/school/ibat-college-dublin/" target="_blank">
-					<i class="fab fa-facebook"></i>
-				</a>
-			</li>
-	
-			<li>
-				<a href="https://ie.linkedin.com/school/ibat-college-dublin/" target="_blank">
-					<i class="fab fa-github"></i>
-				</a>
-			</li>
-	
-			<li>
-				<a href="https://ie.linkedin.com/school/ibat-college-dublin/" target="_blank">
-					<i class="fab fa-twitter"></i>
-				</a>
-			</li>
-	
-			<li>
-				<a href="https://www.instagram.com/ibatcollegedublin/" target="_blank">
-					<i class="fab fa-instagram"></i>
-				</a>
-			</li>
-			
-		 </ul>                
-		
-		<a class="privacy-legal" href="privacy.html">Privacy & Legal</a>
-	</div>
-	
-	<!-- End HTML footer -->
+	<a class="privacy-legal" href="privacy.html">Privacy & Legal</a>
+</div>
+
+<!-- End HTML footer -->
 
 	<!-- Begin JavaScript code for desktop and mobile menus -->
     <script>
@@ -341,7 +342,7 @@
         }
 
 		// Code for menus with transparent background
-		//window.onscroll = function() {swapMenuStyle()};
+		window.onscroll = function() {swapMenuStyle()};
 		const headerDesktop = document.querySelector('.container-menu-desktop');
 		const headerMobile = document.querySelector('.container-menu-bar-mobile');
 
@@ -351,21 +352,20 @@
 		function swapMenuStyle() {
 			if (window.pageYOffset > stickyDesktop) {
 				headerDesktop.classList.add("menu-light","menu-drop-shadow");
-				headerDesktop.classList.remove("menu-transparent");
+				headerDesktop.classList.remove("menu-dark");
 				headerMobile.classList.add("menu-light","menu-drop-shadow");
-				headerMobile.classList.remove("menu-transparent");
+				headerMobile.classList.remove("menu-dark");
 
 			} else {
-				headerDesktop.classList.add("menu-transparent");
+				headerDesktop.classList.add("menu-dark");
 				headerDesktop.classList.remove("menu-light","menu-drop-shadow");
-				headerMobile.classList.add("menu-transparent");
+				headerMobile.classList.add("menu-dark");
 				headerMobile.classList.remove("menu-light","menu-drop-shadow");
 			}
 		}
 
 	</script>
 	<!-- End JavaScript code for desktop and mobile menus -->
-
 
 	<!-- JavaScript for Cookie Consent Popup Message -->
 	<script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
