--- a/software/index.html
+++ b/software/index.html
@@ -75,7 +75,7 @@
         <hr>
         <h4>About Me</h4>
         <div class="fly-out-profile-box">
-			<img src="../../../assets/img/profile-pic.jpg" alt="Philip Burtenshaw, web designer, Dublin">
+			<img src="assets/img/profile-pic.jpg" alt="Philip Burtenshaw, web designer, Dublin">
             <p>Hi, I'm <b>Philip Burtenshaw</b>, a web and digital designer based in Dublin, Ireland.</p>
         </div>
    
@@ -248,9 +248,9 @@
 	<h5>Excellence in digital creation</h5>
 
 	<ul class="footer-links">
-		<li><a href="../../../index.html">Home</a></li>
+		<li><a href="../../index.html">Home</a></li>
 		<li><a href="../../index.html">Portfolio</a></li>
-		<li><a href="../../../index.html">Contact</a></li>
+		<li><a href="../../index.html">Contact</a></li>
 	</ul>
 	
 	<ul class="footer-icons">
