--- a/privacy.html
+++ b/privacy.html
@@ -41,8 +41,8 @@
         <!-- second child item -->
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="portfolio/index.html">Portfolio</a></li>
-            <li><a href="contact/index.html" class="btn-cta">Contact &nbsp;<i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="../portfolio/index.html">Portfolio</a></li>
+            <li><a href="../contact/index.html" class="btn-cta">Contact &nbsp;<i class="fas fa-arrow-right"></i></a></li>
         </ul>
     </div>
     <!-- End desktop menu -->
@@ -65,8 +65,8 @@
     <div class="flyout-menu flyout-menu-is-closed menu-light">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="portfolio/index.html">Portfolio</a></li>
-            <li><a href="contact/index.html" class="btn-cta">Contact &nbsp;<i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="../portfolio/index.html">Portfolio</a></li>
+            <li><a href="../contact/index.html" class="btn-cta">Contact &nbsp;<i class="fas fa-arrow-right"></i></a></li>
         </ul>
 
         <hr>
@@ -202,8 +202,8 @@
 
         <ul class="footer-links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="portfolio/index.html">Portfolio</a></li>
-            <li><a href="contact/index.html">Contact</a></li>
+            <li><a href="../portfolio/index.html">Portfolio</a></li>
+            <li><a href="../contact/index.html">Contact</a></li>
         </ul>
         
         <ul class="footer-icons">
