--- a/privacy.html
+++ b/privacy.html
@@ -64,9 +64,9 @@
     <!-- Begin mobile menu slide-out options -->
     <div class="flyout-menu flyout-menu-is-closed menu-light">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="portfolio/index.html">Portfolio</a></li>
-            <li><a href="contact/index.html" class="btn-cta">Contact &nbsp;<i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="https://philipburtenshawwebdesign.github.io/">Home</a></li>
+            <li><a href="https://philipburtenshawwebdesign.github.io/portfolio/index.html">Portfolio</a></li>
+            <li><a href="https://philipburtenshawwebdesign.github.io/contact/" class="btn-cta">Contact &nbsp;<i class="fas fa-arrow-right"></i></a></li>
         </ul>
 
         <hr>
@@ -201,9 +201,9 @@
         <h5>Excellence in digital creation</h5>
 
         <ul class="footer-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="portfolio/index.html">Portfolio</a></li>
-            <li><a href="contact/index.html">Contact</a></li>
+            <li><a href="https://philipburtenshawwebdesign.github.io/">Home</a></li>
+            <li><a href="https://philipburtenshawwebdesign.github.io/portfolio/index">Portfolio</a></li>
+            <li><a href="https://philipburtenshawwebdesign.github.io/contact/">Contact</a></li>
         </ul>
         
         <ul class="footer-icons">
