--- a/portfolio/hero/index.html
+++ b/portfolio/hero/index.html
@@ -45,7 +45,7 @@
 	</div>
 	
 	<div class="hero-block-2">
-		<h1>Hi, I'm Sheila.</h1>
+		<h1>Hi, I'm Philip.</h1>
 		<h2>I'm a digital and web designer from Dublin, Ireland. On this website I showcase examples of my work.</h2>
 	</div>
 
