--- a/privacy.html
+++ b/privacy.html
@@ -32,12 +32,12 @@
 	</script>
 </head>
 
-<body>
+<body class="privacy">
 
     <!-- Begin desktop menu -->
     <div class="container-menu-desktop menu-trasparent menu-sticky">
         <!-- first child item -->
-        <a href="index.html"><img src="assets/img/website-logo.png" alt="website logo"></a>
+        <a href="index.html"><img src="assets/img/Logo.png" alt="website logo"></a>
         <!-- second child item -->
         <ul>
             <li><a href="https://philipburtenshawwebdesign.github.io/">Home</a></li>
