--- a/contact/index.html
+++ b/contact/index.html
@@ -40,12 +40,12 @@
      <!-- Begin desktop menu -->
 	 <div class="container-menu-desktop menu-transparent menu-sticky">
         <!-- first child item -->
-        <a href="../index.html"><img src="../assets/img/website-logo.png" alt="website logo"></a>
+        <a href="../index.html"><img src="../assets/img/Logo.png" alt="website logo"></a>
         <!-- second child item -->
         <ul>
             <li><a href="https://philipburtenshawwebdesign.github.io/">Home</a></li>
-            <li><a href="https://philipburtenshawwebdesign.github.io/portfolio/">Portfolio</a></li>
-            <li><a href="https://philipburtenshawwebdesign.github.io/contact/" class="btn-cta">Contact &nbsp;<i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="https://philipburtenshawwebdesign.github.io/portfolio/index">Portfolio</a></li>
+            <li><a href="https://philipburtenshawwebdesign.github.io/contact/index" class="btn-cta">Contact &nbsp;<i class="fas fa-arrow-right"></i></a></li>
         </ul>
     </div>
     <!-- End desktop menu -->
@@ -68,8 +68,8 @@
     <div class="flyout-menu flyout-menu-is-closed menu-light">
         <ul>
             <li><a href="https://philipburtenshawwebdesign.github.io/">Home</a></li>
-            <li><a href="https://philipburtenshawwebdesign.github.io/portfolio/">Portfolio</a></li>
-            <li><a href="https://philipburtenshawwebdesign.github.io/contact/" class="btn-cta">Contact &nbsp;<i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="https://philipburtenshawwebdesign.github.io/portfolio/index">Portfolio</a></li>
+            <li><a href="https://philipburtenshawwebdesign.github.io/contact/index" class="btn-cta">Contact &nbsp;<i class="fas fa-arrow-right"></i></a></li>
         </ul>
 
         <hr>
@@ -162,8 +162,8 @@
 
         <ul class="footer-links">
             <li><a href="https://philipburtenshawwebdesign.github.io/">Home</a></li>
-            <li><a href="https://philipburtenshawwebdesign.github.io/portfolio/">Portfolio</a></li>
-            <li><a href="https://philipburtenshawwebdesign.github.io/contact/">Contact</a></li>
+            <li><a href="https://philipburtenshawwebdesign.github.io/portfolio/index">Portfolio</a></li>
+            <li><a href="https://philipburtenshawwebdesign.github.io/contact/index">Contact</a></li>
         </ul>
         
         <ul class="footer-icons">
