--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -37,7 +37,7 @@
     <!-- Begin desktop menu -->
     <div class="container-menu-desktop menu-transparent menu-sticky">
         <!-- first child item -->
-        <a href="../index.html"><img src="../assets/img/website-logo.png" alt="website logo"></a>
+        <a href="../index.html"><img src="../assets/img/Logo.png" alt="website logo"></a>
         <!-- second child item -->
         <ul>
             <li><a href="https://philipburtenshawwebdesign.github.io/">Home</a></li>
