--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- Begin desktop menu -->
     <div class="container-menu-desktop menu-transparent menu-sticky">
         <!-- first child item -->
-        <a href="index.html"><img src="assets/img/logo.png" alt="website logo"></a>
+        <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
         <!-- second child item -->
         <ul>
             <li><a href="https://philipburtenshawwebdesign.github.io/">Home</a></li>
@@ -52,7 +52,7 @@
     <!-- Begin mobile menu bar -->
     <div class="container-menu-bar-mobile menu-transparent menu-sticky">
             <!-- first child -->
-            <a href="index.html"><img src="assets/img/logo.png" alt="website logo"></a>
+            <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
             <!-- second child -->
             <div class="item-icon">
                 <div class="bar1"></div>
