--- a/portfolio/hero/index.html
+++ b/portfolio/hero/index.html
@@ -78,8 +78,8 @@
 
 	<ul class="footer-links">
 		<li><a href="https://philipburtenshawwebdesign.github.io/">Home</a></li>
-		<li><a href="https://philipburtenshawwebdesign.github.io/portfolio/index">Portfolio</a></li>
-		<li><a href="https://philipburtenshawwebdesign.github.io/contact/index">Contact</a></li>
+		<li><a href="https://philipburtenshawwebdesign.github.io/portfolio/index.html">Portfolio</a></li>
+		<li><a href="https://philipburtenshawwebdesign.github.io/contact/index.html">Contact</a></li>
 	</ul>
 	
 	<ul class="footer-icons">
@@ -134,7 +134,7 @@
 			}
 		},
 		"content": {
-			"href": "https://github.com/PhilipBurtenshawWebDesign/philipburtenshawwebdesign.github.io/privacy.html"
+			"href": "https://philipburtenshawwebdesign.github.io/privacy.html"
 		}
 	});
 	</script>
