--- a/portfolio/smoothies/index.html
+++ b/portfolio/smoothies/index.html
@@ -200,8 +200,8 @@
 
 	<ul class="footer-links">
 		<li><a href="https://philipburtenshawwebdesign.github.io/">Home</a></li>
-		<li><a href="https://philipburtenshawwebdesign.github.io/portfolio/index">Portfolio</a></li>
-		<li><a href="https://philipburtenshawwebdesign.github.io/contact/index">Contact</a></li>
+		<li><a href="https://philipburtenshawwebdesign.github.io/portfolio/index.html">Portfolio</a></li>
+		<li><a href="https://philipburtenshawwebdesign.github.io/contact/index.html">Contact</a></li>
 	</ul>
 	
 	<ul class="footer-icons">
@@ -326,7 +326,7 @@
 			}
 		},
 		"content": {
-			"href": "https://github.com/PhilipBurtenshawWebDesign/philipburtenshawwebdesign.github.io/privacy.html"
+			"href": "https://philipburtenshawwebdesign.github.io/privacy.html"
 		}
 	});
 	</script>
