--- a/portfolio/how-to-set-up-a-website/index.html
+++ b/portfolio/how-to-set-up-a-website/index.html
@@ -197,7 +197,7 @@
             </li>
 
             <li>
-                <a href="https://ie.linkedin.com/school/ibat-college-dublin/" target="_blank">
+                <a href="https://philipburtenshawwebdesign.github.io/" target="_blank">
                     <i class="fab fa-github"></i>
                 </a>
             </li>
