--- a/portfolio/travel/contact-us.html
+++ b/portfolio/travel/contact-us.html
@@ -85,7 +85,7 @@
 
 	<h4>Social Links</h4>
 	<div class="fly-out-social-icons">
-		<a href="https://github.com/PhilipBurtenshawWebDesign/philipburtenshawwebdesign.github.io" target="_blank"><i class="fab fa-github-square fa-fw"></i></a>
+		<a href="https://philipburtenshawwebdesign.github.io/" target="_blank"><i class="fab fa-github-square fa-fw"></i></a>
 		<a href="https://ie.linkedin.com/school/ibat-college-dublin/" target="_blank"><i class="fab fa-linkedin fa-fw"></i></a>
 		<a href="https://ie.linkedin.com/school/ibat-college-dublin/" target="_blank"><i class="fab fa-twitter-square"></i></a>
 		<a href="https://www.instagram.com/ibatcollegedublin/" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -184,7 +184,7 @@
 			</li>
 	
 			<li>
-				<a href="https://ie.linkedin.com/school/ibat-college-dublin/" target="_blank">
+				<a href="https://philipburtenshawwebdesign.github.io/" target="_blank">
 					<i class="fab fa-github"></i>
 				</a>
 			</li>
