--- a/portfolio/web-agency/team.html
+++ b/portfolio/web-agency/team.html
@@ -162,8 +162,8 @@
 	
 		<ul class="footer-links">
 			<li><a href="https://philipburtenshawwebdesign.github.io/">Home</a></li>
-			<li><a href="https://philipburtenshawwebdesign.github.io/portfolio/index">Portfolio</a></li>
-			<li><a href="https://philipburtenshawwebdesign.github.io/contact/index">Contact</a></li>
+			<li><a href="https://philipburtenshawwebdesign.github.io/portfolio/index.html">Portfolio</a></li>
+			<li><a href="https://philipburtenshawwebdesign.github.io/contact/index.html">Contact</a></li>
 		</ul>
 		
 		<ul class="footer-icons">
@@ -180,7 +180,7 @@
 			</li>
 	
 			<li>
-				<a href="https://ie.linkedin.com/school/ibat-college-dublin/" target="_blank">
+				<a href="https://philipburtenshawwebdesign.github.io/" target="_blank">
 					<i class="fab fa-github"></i>
 				</a>
 			</li>
@@ -293,7 +293,7 @@ window.cookieconsent.initialise({
 		}
 	},
 	"content": {
-		"href": "https://github.com/PhilipBurtenshawWebDesign/philipburtenshawwebdesign.github.io/privacy.html"
+		"href": "https://philipburtenshawwebdesign.github.io/privacy.html"
 	}
 });
 </script>
