--- a/portfolio/web-agency/contact.html
+++ b/portfolio/web-agency/contact.html
@@ -86,7 +86,7 @@
 	
 			<h4>Social Links</h4>
 			<div class="fly-out-social-icons">
-				<a href="https://github.com/PhilipBurtenshawWebDesign/philipburtenshawwebdesign.github.io" target="_blank"><i class="fab fa-github-square fa-fw"></i></a>
+				<a href="https://philipburtenshawwebdesign.github.io/" target="_blank"><i class="fab fa-github-square fa-fw"></i></a>
 				<a href="https://ie.linkedin.com/school/ibat-college-dublin/" target="_blank"><i class="fab fa-linkedin fa-fw"></i></a>
 				<a href="https://ie.linkedin.com/school/ibat-college-dublin/" target="_blank"><i class="fab fa-twitter-square"></i></a>
 				<a href="https://www.instagram.com/ibatcollegedublin/" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -162,8 +162,8 @@
 
 	<ul class="footer-links">
 		<li><a href="https://philipburtenshawwebdesign.github.io/">Home</a></li>
-		<li><a href="https://philipburtenshawwebdesign.github.io/portfolio/index">Portfolio</a></li>
-		<li><a href="https://philipburtenshawwebdesign.github.io/contact/index">Contact</a></li>
+		<li><a href="https://philipburtenshawwebdesign.github.io/portfolio/index.html">Portfolio</a></li>
+		<li><a href="https://philipburtenshawwebdesign.github.io/contact/index.html">Contact</a></li>
 	</ul>
 	
 	<ul class="footer-icons">
@@ -180,7 +180,7 @@
 		</li>
 
 		<li>
-			<a href="https://ie.linkedin.com/school/ibat-college-dublin/" target="_blank">
+			<a href="https://philipburtenshawwebdesign.github.io/" target="_blank">
 				<i class="fab fa-github"></i>
 			</a>
 		</li>
@@ -293,7 +293,7 @@
 			}
 		},
 		"content": {
-			"href": "https://github.com/PhilipBurtenshawWebDesign/philipburtenshawwebdesign.github.io/privacy.html"
+			"href": "https://philipburtenshawwebdesign.github.io/privacy.html"
 		}
 	});
 	</script>
