--- a/portfolio/web-agency/services.html
+++ b/portfolio/web-agency/services.html
@@ -186,8 +186,8 @@
 
 	<ul class="footer-links">
 		<li><a href="https://philipburtenshawwebdesign.github.io/">Home</a></li>
-		<li><a href="https://philipburtenshawwebdesign.github.io/portfolio/index">Portfolio</a></li>
-		<li><a href="https://philipburtenshawwebdesign.github.io/contact/index">Contact</a></li>
+		<li><a href="https://philipburtenshawwebdesign.github.io/portfolio/index.html">Portfolio</a></li>
+		<li><a href="https://philipburtenshawwebdesign.github.io/contact/index.html">Contact</a></li>
 	</ul>
 	
 	<ul class="footer-icons">
@@ -204,7 +204,7 @@
 		</li>
 
 		<li>
-			<a href="https://ie.linkedin.com/school/ibat-college-dublin/" target="_blank">
+			<a href="https://philipburtenshawwebdesign.github.io/" target="_blank">
 				<i class="fab fa-github"></i>
 			</a>
 		</li>
@@ -317,7 +317,7 @@ window.cookieconsent.initialise({
 		}
 	},
 	"content": {
-		"href": "https://github.com/PhilipBurtenshawWebDesign/philipburtenshawwebdesign.github.io/privacy.html"
+		"href": "https://philipburtenshawwebdesign.github.io/privacy.html"
 	}
 });
 </script>
